container div alignment corrections

--- a/style.css
+++ b/style.css
@@ -6,32 +6,35 @@ body{
     width: 100%;
 }
 
-/* .container{
-position: relative; 
-max-width: 1240px;
+.container{
+/* position: relative;  */
+max-width: 1180px;
 margin: 0 auto;
 
-} */
+}
 
 
 a{
     text-decoration: none;
 }
-.header-container {
-    /* border: 1px solid blue; */
-    display: flex;
-    /* max-width: 86%; */
-    justify-content: space-between;
-    padding-left: 55px;
-    padding-right: 55px;
-    margin-left: auto;
-    margin-right: auto;
+
+.bdr{
+    border: 1px solid black;
+}
+
+
+.nav-container {
     position: sticky;
     top: 0;
     background-color: white;
     z-index: 1;
-    box-shadow: 0 1px 10spx rgba(0, 0, 0, 0.2);
-    overflow: hidden;
+    /* box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2); */
+    /* overflow: hidden; */
+}
+
+.nav-items-wrapper{
+    display: flex;
+    justify-content: space-between;
 }
 
 .logo p{
@@ -122,7 +125,7 @@ nav ul *{
 
     display: flex;
     justify-content: space-between;
-    padding-inline: 120px;
+    /* padding-inline: 120px; */
     padding-top: 40px;
 }
 
@@ -260,7 +263,7 @@ h3{
 
 .multiple-icons{
     display: grid;
-    grid-template-columns: repeat(3, 400px);
+    grid-template-columns: repeat(3, 381px);
     gap: 1rem;    
 }
 
@@ -352,9 +355,9 @@ h3{
 .h3-img-container{
     /* display: grid;
     grid-template-columns: repeat(2, 1fr); */
-    gap: 6%;
+    /* gap: 6%; */
     display: flex;
-    max-width: 1280px;
+    /* max-width: 1280px; */
     overflow: hidden;
     margin-left: auto;
     margin-right: auto;
@@ -398,10 +401,10 @@ h3{
 .fourth{
     
     display: flex;
-    max-width: 1280px;
+    /* max-width: 1280px; */
     gap: 13%;
-    padding-left: 2rem;
-    padding-right: 2rem;
+    /* padding-left: 2rem;
+    padding-right: 2rem; */
     padding-top: 10%;
 
 }
